RESOLVED FIXED215762
Non-special URLs are not idempotent
https://bugs.webkit.org/show_bug.cgi?id=215762
Summary Non-special URLs are not idempotent
Anne van Kesteren
Reported 2020-08-24 00:12:32 PDT
Attachments
Patch (23.56 KB, patch)
2020-09-29 10:20 PDT, Alex Christensen
no flags
Patch (24.30 KB, patch)
2020-09-30 19:17 PDT, Alex Christensen
thorton: review+
Radar WebKit Bug Importer
Comment 1 2020-08-31 00:13:18 PDT
Alex Christensen
Comment 2 2020-08-31 20:12:56 PDT
Sorry I missed a lot of the discussion here. Idempotence is good, but adding a dot is a little strange. Were alternative solutions considered?
Anne van Kesteren
Comment 3 2020-09-01 00:01:14 PDT
Yeah, see the discussion in https://github.com/whatwg/url/issues/415. But solution seemed best (and had precedent in an implementation) as it would not lead to the introduction of a host where there was none.
Alex Christensen
Comment 4 2020-09-29 10:20:57 PDT
Alex Christensen
Comment 5 2020-09-29 10:22:19 PDT
Comment on attachment 410014 [details] Patch This first patch is close but not quite perfect. It's tricky in an implementation that serializes while parsing and tries to use the same string if possible.
Alex Christensen
Comment 6 2020-09-30 19:17:29 PDT
Alex Christensen
Comment 7 2020-10-01 10:05:55 PDT
Note You need to log in before you can comment on or make changes to this bug.