Source/WTF/wtf/URLParser.h
@@ -114,6 +114,9 @@ private:
     StringView parsedDataView(size_t start, size_t length);
     UChar parsedDataView(size_t position);
 
+    bool needsNonSpecialDotSlash() const;
+    void addNonSpecialDotSlash();
+
     using IPv4Address = uint32_t;
     void serializeIPv4(IPv4Address);
     enum class IPv4ParsingError;
